--- a/react-client/src/locales/vi/translation.json
+++ b/react-client/src/locales/vi/translation.json
@@ -1,4 +1,10 @@
 {
  "test": "thử nghiệm",
- "CourseRecommend": "Gợi ý môn học"
+ "CourseRecommend": "Gợi ý môn học",
+ "Logout": "Đăng xuất",
+ "CoursesRecommend": "Gợi ý môn học",
+ "PredictGrade": "Dự đoán điểm",
+ "MyGrade": "Điểm của tôi",
+ "AccountSetting": "Thiết lập hồ sơ",
+ "LearnMoreEffectively": "Học tập hiệu quả hơn"
 }
