feat: UI for pages: account, login, my_grade, predict, recommend

--- a/react-client/src/locales/en/translation.json
+++ b/react-client/src/locales/en/translation.json
@@ -6,5 +6,26 @@
   "PredictGrade": "Predict grade",
   "MyGrade": "My grade",
   "AccountSetting": "Account setting",
-  "LearnMoreEffectively": "Learn more effectively"
+  "LearnMoreEffectively": "Learn more effectively",
+  "NumberOfCourses": "Number of courses",
+  "InputNumberYouWantToSuggest{{min}}-{{max}}": "Input number of courses you want to suggest,\nmin {{min}}, max {{max}}",
+  "SelectOrientations": "Select orientations",
+  "CanSelectMoreThanOne": "Can select more than 1",
+  "Recommend": "Recommend",
+  "SelectCourses": "Select courses",
+  "Predict": "Precict",
+  "GradeAverage": "Grade average",
+  "GradeDistribution": "Grade distribution",
+  "FullName": "Full name",
+  "PersonalInfomation": "Personal infomation",
+  "ChangePassword": "Change password",
+  "Class": "Class",
+  "SchoolYear": "School year",
+  "PhoneNumber": "Phone number",
+  "SaveInfo": "Save information",
+  "PrivateEmail": "Private email",
+  "EnterNewPassword": "Enter new password",
+  "Re-enterPassword": "Re-enter the password",
+  "Login": "Login",
+  "WelcomeBack.PleaseEnterAllInformationBelow.": "Welcome back. Please enter all information below."
 }
