--- a/react-client/src/locales/vi/translation.json
+++ b/react-client/src/locales/vi/translation.json
@@ -1,10 +1,31 @@
 {
- "test": "thử nghiệm",
- "CourseRecommend": "Gợi ý môn học",
- "Logout": "Đăng xuất",
- "CoursesRecommend": "Gợi ý môn học",
- "PredictGrade": "Dự đoán điểm",
- "MyGrade": "Điểm của tôi",
- "AccountSetting": "Thiết lập hồ sơ",
- "LearnMoreEffectively": "Học tập hiệu quả hơn"
+  "test": "thử nghiệm",
+  "CourseRecommend": "Gợi ý môn học",
+  "Logout": "Đăng xuất",
+  "CoursesRecommend": "Gợi ý môn học",
+  "PredictGrade": "Dự đoán điểm",
+  "MyGrade": "Điểm của tôi",
+  "AccountSetting": "Thiết lập hồ sơ",
+  "LearnMoreEffectively": "Học tập hiệu quả hơn",
+  "NumberOfCourses": "Số lượng môn học",
+  "InputNumberYouWantToSuggest{{min}}-{{max}}": "Nhập số lượng môn học bạn muốn được gợi ý,\ntối thiểu {{min}}, tối đa {{max}}",
+  "SelectOrientations": "Lựa chọn định hướng",
+  "CanSelectMoreThanOne": "Có thể lựa chọn nhiều hơn 1",
+  "Recommend": "Gợi ý",
+  "SelectCourses": "Lựa chọn môn học",
+  "Predict": "Dự đoán",
+  "GradeAverage": "Điểm trung bình",
+  "GradeDistribution": "Phân bố điểm",
+  "FullName": "Họ và tên",
+  "PersonalInfomation": "Thông tin cá nhân",
+  "ChangePassword": "Thay đổi mật khẩu",
+  "Class": "Lớp",
+  "SchoolYear": "Niên khóa",
+  "PhoneNumber": "Số điện thoại",
+  "SaveInfo": "Lưu thông tin",
+  "PrivateEmail": "Email cá nhân",
+  "EnterNewPassword": "Nhập mật khẩu mới",
+  "Re-enterPassword": "Nhập lại mật khẩu",
+  "Login": "Đăng nhập",
+  "WelcomeBack.PleaseEnterAllInformationBelow.": "Chào mừng bạn quay trở lại. Bạn vui lòng nhập đầy đủ thông tin phía dưới."
 }
