update translation file

--- a/react-client/src/locales/en/translation.json
+++ b/react-client/src/locales/en/translation.json
@@ -27,5 +27,84 @@
   "EnterNewPassword": "Enter new password",
   "Re-enterPassword": "Re-enter the password",
   "Login": "Login",
-  "WelcomeBack.PleaseEnterAllInformationBelow.": "Welcome back. Please enter all information below."
+  "WelcomeBack.PleaseEnterAllInformationBelow.": "Welcome back. Please enter all information below.",
+  "DevelopmentSystem": "Development System",
+  "Ecommerce": "Ecommerce",
+  "ComputerNetwork": "Computer Network",
+  "IntelligentSystems": "Intelligent Systems",
+  "HumanMachineInteraction": "Human - Machine interaction",
+  "FundamentalPrinciplesOfMarxismLeninism1": "Fundamental Principles of Marxism - Leninism 1",
+  "FundamentalPrinciplesOfMarxismLeninism2": "Fundamental Principles of Marxism - Leninism 2",
+  "HoChiMinhIdeology": "Ho Chi Minh Ideology",
+  "TheRevolutionaryLineOfCommunistPartyOfVietnam": "The Revolutionary Line of Communist Party of Vietnam",
+  "IntroductionToInformatics1": "Introduction to Informatics 1",
+  "IntroductionToInformatics4": "Introduction to Informatics 4",
+  "GeneralEnglish1": "General English 1",
+  "GeneralEnglish2": "General English 2",
+  "GeneralEnglish3": "General English 3",
+  "GeneralEnglish4": "General English 4",
+  "Algebra": "Algebra",
+  "Calculus1": "Calculus 1",
+  "Calculus2": "Calculus 2",
+  "MechanicalAndThermalPhysics": "Mechanical and Thermal Physics",
+  "SignalsAndSystems": "Signals and systems",
+  "DataStructuresAndAlgorithms": "Data structures and algorithms",
+  "ProbabilityAndStatistics": "Probability and Statistics",
+  "AdvancedProgramming": "Advanced Programming",
+  "ObjectOrientedProgramming": "Object-oriented Programming",
+  "ComputerArchitecture": "Computer Architecture",
+  "DiscreteMathematics": "Discrete Mathematics",
+  "PrinciplesOfOperatingSystems": "Principles of operating systems",
+  "SoftwareEngineering": "Software Engineering",
+  "Database": "Database",
+  "ArtificialIntellegence": "Artificial Intellegence",
+  "AdvancedTopicsInComputerScience": "Advanced topics in Computer Science",
+  "InformationTheory": "Information Theory",
+  "TechnologyWorkshop": "Technology workshop",
+  "DesignAndAnalysisOfAlgorithmsMobileApplication": "Design and Analysis of Algorithms - Mobile Application",
+  "IndustrialInternship": "Industrial Internship",
+  "ScienceProject": "Science Project",
+  "TechnologyProject": "Technology Project",
+  "SoftwareArchitecture": "Software Architecture",
+  "ObjectOrientedAnalysisAndDesign": "Object-oriented Analysis and Design",
+  "SoftwareTestingAndQualityAssurance": "Software Testing and Quality Assurance",
+  "RequirementEngineering": "Requirement Engineering",
+  "RealTimeAndEmbeddedProgramming": "Real-time and embedded programming",
+  "SystemPrograming": "System Programing",
+  "MobileCloudComputing": "Mobile Cloud Computing",
+  "WebApplicationDevelopment": "Web Application Development",
+  "ServiceOrientedArchitecture": "Service Oriented Architecture",
+  "SoftwareProjectManagement": "Software Project Management",
+  "DistributedDatabase": "Distributed Database",
+  "IntroductionToInformationSecurity": "Introduction to Information Security",
+  "NetworkSafetyAndSecurity": "Network Safety and Security",
+  "NetworkOperatingSystemLab": "Network operating system lab",
+  "MobileUbiquitousComputing": "Mobile & Ubiquitous Computing",
+  "DistributedSystems": "Distributed Systems",
+  "Compilers": "Compilers",
+  "Bioinformatics": "Bioinformatics",
+  "MachineLearning": "Machine Learning",
+  "NaturalLanguageProcessing": "Natural Language Processing",
+  "SpeechProcessing": "Speech Processing",
+  "SemanticWeb": "Semantic Web",
+  "CompetitiveProgramming": "Competitive Programming",
+  "Robotics": "Robotics",
+  "GraphAlgorithmsAndApplications": "Graph algorithms and applications",
+  "InformationRetrievalAndWebSearch": "Information Retrieval and Web Search",
+  "SpecialProblemsInComputerScience": "Special Problems in Computer Science",
+  "ComputerGraphics": "Computer Graphics",
+  "ImageProcessing": "Image Processing",
+  "ComputerVision": "Computer Vision",
+  "DataAnalysis": "Data Analysis",
+  "NumericalMethods": "Numerical Methods",
+  "Optimization": "Optimization",
+  "ProfessionalInTechnology": "Professional in Technology",
+  "ModelingAndSimulation": "Modeling and Simulation",
+  "DigitalSignalProcessing": "Digital Signal Processing",
+  "MarketingPrinciples": "Marketing Principles",
+  "MicroEconomics1": "Micro Economics 1",
+  "MacroEconomics1": "Macro Economics 1",
+  "AuditingPrinciples": "Auditing Principles",
+  "BranchRelationsAndResourceAdministration": "Branch Relations and Resource Administration",
+  "GraduationThesis": "Graduation Thesis"
 }
