--- a/react-client/src/locales/vi/translation.json
+++ b/react-client/src/locales/vi/translation.json
@@ -27,5 +27,84 @@
   "EnterNewPassword": "Nhập mật khẩu mới",
   "Re-enterPassword": "Nhập lại mật khẩu",
   "Login": "Đăng nhập",
-  "WelcomeBack.PleaseEnterAllInformationBelow.": "Chào mừng bạn quay trở lại. Bạn vui lòng nhập đầy đủ thông tin phía dưới."
+  "WelcomeBack.PleaseEnterAllInformationBelow.": "Chào mừng bạn quay trở lại. Bạn vui lòng nhập đầy đủ thông tin phía dưới.",
+  "DevelopmentSystem": "Phát triển hệ thống",
+  "Ecommerce": "Thương mại điện tử",
+  "ComputerNetwork": "Mạng máy tính",
+  "IntelligentSystems": "Các hệ thống thông minh",
+  "HumanMachineInteraction": "Tương tác người - máy",
+  "FundamentalPrinciplesOfMarxismLeninism1": "Những nguyên lý cơ bản của chủ nghĩa Mác - Lênin 1",
+  "FundamentalPrinciplesOfMarxismLeninism2": "Những nguyên lý cơ bản của chủ nghĩa Mác - Lênin 2",
+  "HoChiMinhIdeology": "Tư tưởng Hồ Chí Minh",
+  "TheRevolutionaryLineOfCommunistPartyOfVietnam": "Đường lối Cách mạng của Đảng Cộng sản Việt Nam",
+  "IntroductionToInformatics1": "Tin học cơ sở 1",
+  "IntroductionToInformatics4": "Tin học cơ sở 4",
+  "GeneralEnglish1": "Tiếng Anh cơ sở 1",
+  "GeneralEnglish2": "Tiếng Anh cơ sở 2",
+  "GeneralEnglish3": "Tiếng Anh cơ sở 3",
+  "GeneralEnglish4": "Tiếng Anh cơ sở 4",
+  "Algebra": "Đại số",
+  "Calculus1": "Giải tích 1",
+  "Calculus2": "Giải tích 2",
+  "MechanicalAndThermalPhysics": "Cơ nhiệt",
+  "SignalsAndSystems": "Tín hiệu và hệ thống",
+  "DataStructuresAndAlgorithms": "Cấu trúc dữ liệu và giải thuật",
+  "ProbabilityAndStatistics": "Xác suất thống kê",
+  "AdvancedProgramming": "Lập trình nâng cao",
+  "ObjectOrientedProgramming": "Lập trình hướng đối tượng",
+  "ComputerArchitecture": "Kiến trúc máy tính",
+  "DiscreteMathematics": "Toán học rời rạc",
+  "PrinciplesOfOperatingSystems": "Nguyên lý hệ điều hành",
+  "SoftwareEngineering": "Công nghệ phần mềm",
+  "Database": "Cơ sở dữ liệu",
+  "ArtificialIntellegence": "Trí tuệ nhân tạo",
+  "AdvancedTopicsInComputerScience": "Các vấn đề hiện đại trong KHMT",
+  "InformationTheory": "Lý thuyết thông tin",
+  "TechnologyWorkshop": "Chuyên đề Công nghệ",
+  "DesignAndAnalysisOfAlgorithmsMobileApplication": "Phân tích và thiết kế thuật toán - Ứng dụng trong di động",
+  "IndustrialInternship": "Thực tập doanh nghiệp",
+  "ScienceProject": "Dự án khoa học",
+  "TechnologyProject": "Dự án công nghệ",
+  "SoftwareArchitecture": "Kiến trúc phần mềm",
+  "ObjectOrientedAnalysisAndDesign": "Phân tích và thiết kế hướng đối tượng",
+  "SoftwareTestingAndQualityAssurance": "Kiểm thử và đảm bảo chất lượng phần mềm",
+  "RequirementEngineering": "Kỹ nghệ yêu cầu",
+  "RealTimeAndEmbeddedProgramming": "Lập trình nhúng và thời gian thực",
+  "SystemPrograming": "Lập trình hệ thống",
+  "MobileCloudComputing": "Ứng dụng di động cho điện toán đám mây",
+  "WebApplicationDevelopment": "Phát triển ứng dụng Web",
+  "ServiceOrientedArchitecture": "Kiến trúc hướng dịch vụ",
+  "SoftwareProjectManagement": "Quản lý dự án phần mềm",
+  "DistributedDatabase": "Cơ sở dữ liệu phân tán",
+  "IntroductionToInformationSecurity": "Nhập môn an toàn thông tin",
+  "NetworkSafetyAndSecurity": "An toàn và an ninh mạng",
+  "NetworkOperatingSystemLab": "Thực hành hệ điều hành mạng",
+  "MobileUbiquitousComputing": "Tính toán di động",
+  "DistributedSystems": "Hệ phân tán",
+  "Compilers": "Chương trình dịch",
+  "Bioinformatics": "Tin sinh học",
+  "MachineLearning": "Học máy",
+  "NaturalLanguageProcessing": "Xử lý ngôn ngữ tự nhiên",
+  "SpeechProcessing": "Xử lý tiếng nói",
+  "SemanticWeb": "Web ngữ nghĩa",
+  "CompetitiveProgramming": "Lập trình thi đấu",
+  "Robotics": "Rô-bốt",
+  "GraphAlgorithmsAndApplications": "Các thuật toán đồ thị và ứng dụng",
+  "InformationRetrievalAndWebSearch": "Truy vấn thông tin và tìm kiếm Web",
+  "SpecialProblemsInComputerScience": "Các chuyên đề trong KHMT",
+  "ComputerGraphics": "Đồ họa máy tính",
+  "ImageProcessing": "Xử lý ảnh",
+  "ComputerVision": "Thị giác máy",
+  "DataAnalysis": "Phân tích dữ liệu trực quan",
+  "NumericalMethods": "Phương pháp tính",
+  "Optimization": "Tối ưu hóa",
+  "ProfessionalInTechnology": "Chuyên nghiệp trong công nghệ",
+  "ModelingAndSimulation": "Mô hình hóa và mô phỏng",
+  "DigitalSignalProcessing": "Xử lý tín hiệu số",
+  "MarketingPrinciples": "Nguyên lý Marketing",
+  "MicroEconomics1": "Kinh tế vi mô 1",
+  "MacroEconomics1": "Kinh tế vĩ mô 1",
+  "AuditingPrinciples": "Nguyên lý kế toán",
+  "BranchRelationsAndResourceAdministration": "Quan hệ ngành và quản trị nguồn nhân lực",
+  "GraduationThesis": "Khóa luận tốt nghiệp"
 }
