feat: notification component, fix login page

--- a/react-client/src/locales/en/translation.json
+++ b/react-client/src/locales/en/translation.json
@@ -109,5 +109,7 @@
   "BranchRelationsAndResourceAdministration": "Branch Relations and Resource Administration",
   "GraduationThesis": "Graduation Thesis",
   "ThisIsRequiredField": "This is required field",
-  "MaxLengthIs{{max}}": "Max length is {{max}}"
+  "MaxLengthIs{{max}}": "Max length is {{max}}",
+  "Error": "Error",
+  "IncorrectUsernameOrPassword": "Incorrect username or password"
 }
