fix: save user info to local storage, fix select component

--- a/react-client/src/locales/vi/translation.json
+++ b/react-client/src/locales/vi/translation.json
@@ -7,7 +7,8 @@
   "AccountSetting": "Thiết lập hồ sơ",
   "LearnMoreEffectively": "Học tập hiệu quả hơn",
   "NumberOfCourses": "Số lượng môn học",
-  "InputNumberYouWantToSuggest{{min}}-{{max}}": "Nhập số lượng môn học bạn muốn được gợi ý,\ntối thiểu {{min}}, tối đa {{max}}",
+  "InputNumberYouWantToSuggest{{min}}-{{max}}": "Nhập số lượng môn học bạn muốn được gợi ý, tối thiểu {{min}}, tối đa {{max}}",
+  "InputNumberInRange{{min}}-{{max}}": "Nhập số trong khoảng 1-20",
   "SelectOrientations": "Lựa chọn định hướng",
   "CanSelectMoreThanOne": "Có thể lựa chọn nhiều hơn 1",
   "Recommend": "Gợi ý",
