--- a/react-client/src/locales/en/translation.json
+++ b/react-client/src/locales/en/translation.json
@@ -7,12 +7,13 @@
   "AccountSetting": "Account setting",
   "LearnMoreEffectively": "Learn more effectively",
   "NumberOfCourses": "Number of courses",
-  "InputNumberYouWantToSuggest{{min}}-{{max}}": "Input number of courses you want to suggest,\nmin {{min}}, max {{max}}",
+  "InputNumberYouWantToSuggest{{min}}-{{max}}": "Input number of courses you want to suggest, min {{min}}, max {{max}}",
+  "InputNumberInRange{{min}}-{{max}}": "Input number in range 1-20",
   "SelectOrientations": "Select orientations",
   "CanSelectMoreThanOne": "Can select more than 1",
   "Recommend": "Recommend",
   "SelectCourses": "Select courses",
-  "Predict": "Precict",
+  "Predict": "Predict",
   "GradeAverage": "Grade average",
   "GradeDistribution": "Grade distribution",
   "Username": "Username",
