--- a/react-client/src/locales/en/translation.json
+++ b/react-client/src/locales/en/translation.json
@@ -21,8 +21,8 @@
   "FullName": "Full name",
   "PersonalInfomation": "Personal infomation",
   "ChangePassword": "Change password",
-  "Class": "Class",
-  "SchoolYear": "School year",
+  "ClassName": "ClassName",
+  "DateOfBirth": "Date of birth",
   "PhoneNumber": "Phone number",
   "SaveInfo": "Save information",
   "PrivateEmail": "Private email",
@@ -111,6 +111,27 @@
   "GraduationThesis": "Graduation Thesis",
   "ThisIsRequiredField": "This is required field",
   "MaxLengthIs{{max}}": "Max length is {{max}}",
+  "MinLengthIs{{min}}": "Min length is {{min}}",
   "Error": "Error",
-  "IncorrectUsernameOrPassword": "Incorrect username or password"
+  "IncorrectUsernameOrPassword": "Incorrect username or password",
+  "AnErrorOccuredPleaseTryAgain": "An error occured, please try again",
+  "Course": "Course",
+  "PredictedGrade": "Predicted grade",
+  "Orientation": "Orientation",
+  "ChangePasswordSuccessfully": "Change password successfully",
+  "ReEnteredPasswordDoesNotMatch": "Re-entered password does not match",
+  "ChangeProfileSuccessfully": "Change profile successfully",
+  "ConversionGrade": "Conversion grade",
+  "Grade": "Grade",
+  "AscendingGrade": "Ascending grade",
+  "DescendingGrade": "Descending grade",
+  "UnsortedGrade": "Unsorted grade",
+  "SortOrder": "Sort order",
+  "Setting": "Setting",
+  "ShowMore": "Show more",
+  "Collapse": "Collapse",
+  "SelectChartType": "Select chart type",
+  "BarChart": "Bar chart",
+  "LineChart": "Line chart",
+  "With": "With"
 }
