--- a/react-client/src/locales/vi/translation.json
+++ b/react-client/src/locales/vi/translation.json
@@ -21,8 +21,8 @@
   "FullName": "Họ và tên",
   "PersonalInfomation": "Thông tin cá nhân",
   "ChangePassword": "Thay đổi mật khẩu",
-  "Class": "Lớp",
-  "SchoolYear": "Niên khóa",
+  "ClassName": "Tên lớp",
+  "DateOfBirth": "Ngày tháng năm sinh",
   "PhoneNumber": "Số điện thoại",
   "SaveInfo": "Lưu thông tin",
   "PrivateEmail": "Email cá nhân",
@@ -111,6 +111,27 @@
   "GraduationThesis": "Khóa luận tốt nghiệp",
   "ThisIsRequiredField": "Đây là trường bắt buộc",
   "MaxLengthIs{{max}}": "Độ dài tối đa là {{max}}",
+  "MinLengthIs{{min}}": "Độ dài tối thiểu là {{min}}",
   "Error": "Lỗi",
-  "IncorrectUsernameOrPassword": "Tên đăng nhập hoặc mật khẩu không đúng"
+  "IncorrectUsernameOrPassword": "Tên đăng nhập hoặc mật khẩu không đúng",
+  "AnErrorOccuredPleaseTryAgain": "Có lỗi xảy ra, vui lòng thử lại",
+  "Course": "Môn học",
+  "PredictedGrade": "Điểm dự đoán",
+  "Orientation": "Định hướng",
+  "ChangePasswordSuccessfully": "Thay đổi mật khẩu thành công",
+  "ReEnteredPasswordDoesNotMatch": "Mật khẩu nhập lại không khớp",
+  "ChangeProfileSuccessfully": "Thay đổi hồ sơ thành công",
+  "ConversionGrade": "Điểm quy đổi",
+  "Grade": "Điểm",
+  "AscendingGrade": "Điểm sắp xếp tăng dần",
+  "DescendingGrade": "Điểm sắp xếp giảm dần",
+  "UnsortedGrade": "Điểm chưa được sắp xếp",
+  "SortOrder": "Thứ tự sắp xếp",
+  "Setting": "Tùy chọn",
+  "ShowMore": "Xem thêm",
+  "Collapse": "Thu gọn",
+  "SelectChartType": "Chọn loại biểu đồ",
+  "BarChart": "Biểu đồ cột",
+  "LineChart": "Biểu đồ đường",
+  "With": "Cùng"
 }
