fix: select comp reset active options after submit form

--- a/react-client/src/locales/en/translation.json
+++ b/react-client/src/locales/en/translation.json
@@ -133,5 +133,6 @@
   "SelectChartType": "Select chart type",
   "BarChart": "Bar chart",
   "LineChart": "Line chart",
-  "With": "With"
+  "With": "With",
+  "SortedByCourse": "Sorted by courses"
 }
