fix: replace date of birth input field by datepicker

--- a/react-client/src/locales/vi/translation.json
+++ b/react-client/src/locales/vi/translation.json
@@ -16,7 +16,7 @@
   "Predict": "Dự đoán",
   "GradeAverage": "Điểm trung bình",
   "GradeDistribution": "Phân bố điểm",
-  "Username": "Tên người dùng",
+  "Username": "Tên đăng nhập",
   "Password": "Mật khẩu",
   "FullName": "Họ và tên",
   "PersonalInfomation": "Thông tin cá nhân",
